docs: Update the two notebooks

--- a/inference.ipynb
+++ b/inference.ipynb
@@ -261,6 +261,12 @@
       },
       "outputs": [],
       "source": [
+        "val = []\n",
+        "with open('data/nikluge-sa-2022-dev.jsonl', 'r') as file:\n",
+        "    for line in file.readlines():\n",
+        "        val.append(json.loads(line))\n",
+        "        \n",
+        "\n",
         "test = []\n",
         "with open('data/nikluge-sa-2022-test.jsonl', 'r') as file:\n",
         "    for line in file.readlines():\n",
