docs: Update the notebook to inference model

--- a/inference.ipynb
+++ b/inference.ipynb
@@ -772,6 +772,15 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "best_logit_threshold = 3.3633633633633635"
+      ]
+    },
+    {
+      "cell_type": "code",
       "execution_count": 21,
       "metadata": {
         "colab": {
@@ -932,10 +941,9 @@
       },
       "outputs": [],
       "source": [
-        "batch_size = 1\n",
         "test_range_asc = torch.arange(len(test))\n",
         "test_ds_asc = TensorDataset(test_range_asc)\n",
-        "test_loader_asc = DataLoader(test_ds_asc, sampler=SequentialSampler(test_ds_asc), batch_size=batch_size)"
+        "test_loader_asc = DataLoader(test_ds_asc, sampler=SequentialSampler(test_ds_asc), batch_size=1)"
       ]
     },
     {
